correccion de variable precio

--- a/src/views/view_carts.handlebars
+++ b/src/views/view_carts.handlebars
@@ -7,7 +7,7 @@
                 <h2>{{product.title}}</h2>
                 <p><strong>Descripción:</strong> {{product.description}}</p>
                 <p><strong>Código:</strong> {{product.code}}</p>
-                <p><strong>Precio:</strong> ${{product.precio}}</p>
+                <p><strong>Precio:</strong> ${{product.price}}</p>
                 <p><strong>Stock:</strong> {{product.stock}} unidades</p>
                 <p><strong>Estado:</strong> {{#if product.status}}Disponible{{else}}Agotado{{/if}}</p>
             </div>
