--- a/src/views/view_products.handlebars
+++ b/src/views/view_products.handlebars
@@ -8,7 +8,7 @@
                     <h2>{{title}}</h2>
                     <p><strong>Descripción:</strong> {{description}}</p>
                     <p><strong>Código:</strong> {{code}}</p>
-                    <p><strong>Precio:</strong> ${{precio}}</p>
+                    <p><strong>Precio:</strong> ${{price}}</p>
                     <p><strong>Stock:</strong> {{stock}} unidades</p>
                     <p><strong>Estado:</strong> {{#if status}}Disponible{{else}}Agotado{{/if}}</p>
                 </div>
