--- a/src/views/view_products.handlebars
+++ b/src/views/view_products.handlebars
@@ -3,12 +3,13 @@
     <table>
         <thead>
         <tr>
-            <th>Nombre</th>
-            <th>Apellido</th>
-            <th>Email</th>
-            <th>Género</th>
-            <th>Calificación</th>
-            <th>Grupo</th>
+            <th>Producto</th>
+            <th>descripción</th>
+            <th>Código</th>
+            <th>Precio</th>
+            <th>Stock</th>
+            <th>Estado</th>
+            <th>Imagen</th>
         </tr>
         </thead>
         <tbody>
