Agrego estilos a la paginacion

--- a/src/views/view_products.handlebars
+++ b/src/views/view_products.handlebars
@@ -24,7 +24,7 @@
                 <td>{{stock}}</td>
                 <td>{{#if status}}Disponible{{else}}Agotado{{/if}}</td>
                 <td><img src="{{thumbnails}}" alt="{{title}}" class="product-image"></td>
-                <td><button>X</button></td>
+                <td><button class="add-to-cart"><i class="fas fa-cart-plus"></i></button></td>
                 </tr>
             {{/each}}
         </tbody>
