--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <title>App WEB-SOCKET</title>
   </head>
   <header>
-    <h1>Lista de Productos</h1>
+    <h1>Agregar Producto</h1>
   </header>
   <body>
     {{{body}}}
