mas estilos en carritos

--- a/src/views/view_carts.handlebars
+++ b/src/views/view_carts.handlebars
@@ -1,19 +1,32 @@
 <h1>Lista de Productos</h1>
 {{#if carts.products.length}}
-    <div>
+    <table>
+        <thead>
+        <tr>
+            <th>Producto</th>
+            <th>descripción</th>
+            <th>Código</th>
+            <th>Precio</th>
+            <th>Stock</th>
+            <th>Estado</th>
+            <th>Imagen</th>
+        </tr>
+        </thead>
+        <tbody>
         {{#each carts.products}}
             {{!-- <div class="product-card"> --}}
-            <div>
-                <img src="{{product.thumbnails}}" alt="{{product.title}}" class="product-image">
-                <h2>{{product.title}}</h2>
-                <p><strong>Descripción:</strong> {{product.description}}</p>
-                <p><strong>Código:</strong> {{product.code}}</p>
-                <p><strong>Precio:</strong> ${{product.price}}</p>
-                <p><strong>Stock:</strong> {{product.stock}} unidades</p>
-                <p><strong>Estado:</strong> {{#if product.status}}Disponible{{else}}Agotado{{/if}}</p>
-            </div>
+                <tr>
+                <td style="text-transform: uppercase;"><strong>{{product.title}}</strong></td>
+                <td>{{product.description}}</td>
+                <td>{{product.code}}</td>
+                <td>{{product.price}}</td>
+                <td>{{product.stock}}</td>
+                <td>{{#if product.status}}Disponible{{else}}Agotado{{/if}}</td>
+                <td><img src="{{product.thumbnails}}" alt="{{product.title}}" class="product-image"></td>
+                </tr>           
         {{/each}}
-    </div>
+        </tbody>
+    </table>
 {{else}}
     <p>No hay productos disponibles.</p>
 {{/if}}
