--- a/src/views/view_carts.handlebars
+++ b/src/views/view_carts.handlebars
@@ -1,4 +1,4 @@
-<h1>Lista de Productos</h1>
+<h1>Lista de Productos del Carrito {{carts.title}}</h1>
 {{#if carts.products.length}}
     <table>
         <thead>
